--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,6 @@
   <body>
           Hello, world! Hello, again..
           Hi, What we're gonna do today?
+          There're two projects need to develop
   </body>
 </html>
