--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
+
     <title>My Webpage</title>
+    <style>
+      body{
+          background-color: #222;
+          color: #ccc;
+      }
+
+    </style>
   </head>
   <body>
-          Hello, world! Hello, again..
-          Hi, What we're gonna do today?
-          There're two projects need to develop
-            <h2> h2 is the big heading </h2>
+
+        <h1>Hello, world!</h1>
 
   </body>
 </html>
