--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,11 @@
           background-color: #222;
           color: #ccc;
       }
+      
+      h1{
+          font-size: 38px;
+          font-weight: 600;
+      }
 
     </style>
   </head>
