--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
           background-color: #222;
           color: #ccc;
       }
-      
+
       h1{
           font-size: 38px;
           font-weight: 600;
@@ -19,6 +19,8 @@
   <body>
 
         <h1>Hello, world!</h1>
+        <br>
+        Added new feature
 
   </body>
 </html>
