--- a/hello.html
+++ b/hello.html
@@ -3,22 +3,42 @@
   <head>
 
     <title>My Webpage</title>
-    <style>
-      body{
-          background-color: #222;
-          color: #ccc;
-      }
-      
-      h1{
-          font-size: 38px;
-          font-weight: 600;
-      }
-
-    </style>
+     
   </head>
   <body>
 
         <h1>Hello, world!</h1>
+
+        <h2>Table of Contents</h2>
+
+        <ul>
+           <li><a href="Senction1">Senction1</a></li>
+           <li><a href="Senction2">Senction2</a></li>
+           <li><a href="Senction3">Senction3</a></li>
+        </ul>
+
+        <h2 id="Senction1">Senction1</h2>
+        <p>This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,</p>
+
+        <h2 id="Senction2">Senction2</h2>
+        <p>This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,</p>
+        <h2 id="Senction3">Senction3</h2>
+        <p>This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,
+        This is a paragraph of text, This is a paragraph of text,</p>
 
   </body>
 </html>
