--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,19 @@
 
   </head>
   <body>
- 
+        <div>
+          <form>
+            <div>
+              <input type="text" name="name" placeholder="Name">
+              <input type="password" name="password" placeholder="Password">
+
+            </div>
+            <div>
+              <input type="radio" name="gender" value="male">Male<br>
+              <input type="radio" name="gender" value="female">Female<br>
+
+            </div>
+          </form>
+        </div>
   </body>
 </html>
